ui: fix minor layout issues

--- a/src/ui/component/common/Popup.pug
+++ b/src/ui/component/common/Popup.pug
@@ -26,10 +26,9 @@ style.
 		width 100dvw
 		z-index 10
 	.popup-body
-		background var(--c-subreddit-theme)
+		background var(--c-theme)
 		border-radius 12px
 		box-shadow 0 0 24px var(--c-blend-weak)
-		color var(--c-subreddit-theme-text)
 		max-height 96dvh
 		max-width 700px
 		overflow auto
