--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -324,6 +324,7 @@ style.
 		position absolute
 		right calc(100% + 1ch)
 		top -0.5ch
+		white-space pre
 		.post-upvoted &
 			color orangered
 		.post-downvoted &
