--- a/src/ui/component/feed/subreddit/SubredditWikiPage.pug
+++ b/src/ui/component/feed/subreddit/SubredditWikiPage.pug
@@ -83,9 +83,8 @@ style.
 	.wiki-body
 		margin-top 2em
 		:global(& > .md)
-			background var(--c-subreddit-theme)
+			background var(--c-theme)
 			border-radius 1em
-			color var(--c-subreddit-theme-text)
 			padding 10px 1em
 	.wiki-info
 		align-items center
@@ -121,7 +120,7 @@ style.
 		color inherit
 		padding 0
 	:global(.wiki .toc a:hover)
-		color var(--c-subreddit-theme-text)
+		color var(--c-subreddit-theme)
 	:global(.wiki .toc + *)
 		margin-top 0
 	:global(.wiki .toc li)
