--- a/src/ui/component/message/Message.pug
+++ b/src/ui/component/message/Message.pug
@@ -58,9 +58,8 @@ style.
 		max-width 360px
 		position relative
 	:global(.message > .md)
-		background var(--c-subreddit-theme)
+		background var(--c-theme)
 		border-radius 12px
-		color var(--c-subreddit-theme-text)
 		display inline-block
 		padding 12px
 	.message-author
