--- a/src/ui/component/user/User.pug
+++ b/src/ui/component/user/User.pug
@@ -128,7 +128,10 @@ style.
 		grid-template-columns 64px 1fr
 		justify-items flex-start
 	.user-content
+		margin-left 80px
 		margin-top 2em
+		:global(& .feed-actions)
+			width auto !important
 	.user-content-options
 		margin-left 80px
 		margin-top 10px
