ui: restore subreddit background colors (with improvements)

--- a/src/ui/component/common/Button.pug
+++ b/src/ui/component/common/Button.pug
@@ -65,7 +65,7 @@ style.
 			background var(--c-con-normal)
 	.button-badge
 		border-radius 10px
-		background var(--c-con-strong)
+		background var(--c-blend-weak)
 		font-size 0.5em
 		font-weight var(--f-wght-strong)
 		padding 0 1ch
@@ -74,5 +74,6 @@ style.
 		font-weight bold
 		padding-bottom 4px
 	.button-dropdown-option
+		background var(--c-theme)
+		color var(--c-theme-text)
 		font inherit
-		background var(--c-bg)
