--- a/src/ui/component/common/Popup.pug
+++ b/src/ui/component/common/Popup.pug
@@ -26,7 +26,7 @@ style.
 		width 100dvw
 		z-index 100
 	.popup-body
-		background var(--c-bg)
+		background var(--c-theme)
 		border-radius 1em
 		box-shadow 0 0 24px var(--c-blend-weak)
 		max-height 90dvh
