--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -195,7 +195,7 @@ style.
 		gap 0.333em
 		margin-top 0.666em
 		:fullscreen &
-			background var(--c-bg)
+			background var(--c-theme)
 			border-radius 27px
 			bottom 1em
 			left 25vw
@@ -266,7 +266,6 @@ style.
 		width 6px
 	.media-volume-bar-filled
 		background var(--c-brand-gradient)
-		color var(--c-text-strong) !important
 	.media-volume-bar-mute
 		align-self flex-start
 		background none !important
