--- a/src/ui/component/feed/FeedSummary.pug
+++ b/src/ui/component/feed/FeedSummary.pug
@@ -1,4 +1,6 @@
 script.
+	import { getContext } from 'svelte'
+
 	import api from '../../../api/index.js'
 	
 	import Feed from './Feed.pug'
@@ -14,6 +16,7 @@ script.
 	error = false
 	loading = false
 	info = null
+	set_theme_color = getContext('set_theme_color')
 
 	switch
 		when collection_id
@@ -32,6 +35,13 @@ script.
 			api.loadWatch(api.ID('user', user_name), (x) ->
 				{ data: info, error, loading } = x
 			)
+	
+	if subreddit_name
+		api.loadWatch(api.ID('subreddit', subreddit_name), ({ data: subreddit }) ->
+			set_theme_color(subreddit?.primary_color || subreddit?.key_color)
+		)
+	else
+		set_theme_color()
 
 svelte:head
 	{#key info}
