--- a/src/ui/component/feed/subreddit/ReportDialog.pug
+++ b/src/ui/component/feed/subreddit/ReportDialog.pug
@@ -87,7 +87,7 @@ style.
 	.report-menu-rule-button
 		display none
 	.report-menu-rule-gradient-fade
-		background linear-gradient(to top, var(--c-bg) 0px, transparent)
+		background linear-gradient(to top, var(--c-theme) 0px, transparent)
 		bottom 0
 		height 37%
 		left 0
