--- a/src/ui/component/post/Comment.pug
+++ b/src/ui/component/post/Comment.pug
@@ -95,7 +95,6 @@ script.
 		(x) ->
 			{ data: comment } = x
 			if comment
-				console.log comment
 				if comment.deeper_replies
 					api.watch(comment.deeper_replies_id,
 						(x) -> { loading: deeper_replies_loading } = x
@@ -154,7 +153,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		:global(& > .md)
-			background var(--c-blend-weak)
+			background var(--c-tint-normal)
 			border-radius 13px
 			display inline-block
 			padding 1em
@@ -185,7 +184,7 @@ style.
 	.comment-score
 		background none
 		border-radius 4px 0 0 4px
-		border-right 2px solid var(--c-bg)
+		border-right 2px solid var(--c-theme)
 		color var(--c-text-weak)
 		display flex
 		font-family var(--f-family-mono)
