--- a/src/ui/component/user/UserByline.pug
+++ b/src/ui/component/user/UserByline.pug
@@ -7,8 +7,16 @@ script.
 	export flair_text = null
 	export name = null
 
-span.user-byline(class='user-byline-distinguish-{distinguish}')
-	a.user-byline-name(href='/u/{name}') {name}
+	distinguish_text = (distinguish) ->
+		switch distinguish
+			when 'admin' then '(Admin) '
+			when 'moderator' then '(Mod) '
+			when 'special' then '(Ex-Admin)'
+			when 'submitter' then '(OP) '
+			else ''
+
+address.user-byline
+	a.user-byline-name(href='/u/{name}') {distinguish_text(distinguish)}{name}
 	{#if flair_text}
 		UserFlair(color={flair_color} emoji_style='image' rich_text={flair_rich_text} text={flair_text})
 
@@ -26,15 +34,3 @@ style.
 		white-space nowrap
 	.user-byline-name
 		font-weight bold
-		.user-byline-distinguish-admin &
-			color var(--c-author-admin)
-			font-weight var(--f-wght-strong)
-		.user-byline-distinguish-moderator &
-			color var(--c-author-mod)
-			font-weight var(--f-wght-strong)
-		.user-byline-distinguish-special &
-			color var(--c-author-vip)
-			font-weight var(--f-wght-strong)
-		.user-byline-distinguish-submitter &
-			color var(--c-author-op)
-			font-weight var(--f-wght-strong)
