ui: further improve theme colorings

--- a/src/ui/component/post/PostVideoPlayer.pug
+++ b/src/ui/component/post/PostVideoPlayer.pug
@@ -207,7 +207,7 @@ style.
 			opacity 0
 	.media-player-video-hint-overlay
 		align-items center
-		background var(--c-shade-strong)
+		background rgba(0,0,0,0.50)
 		border-radius 1em
 		color white
 		display flex
