--- a/src/ui/stylesheet.styl
+++ b/src/ui/stylesheet.styl
@@ -60,10 +60,8 @@ body
 	&::-webkit-scrollbar
 		display none
 	--c-brand-gradient linear-gradient(120deg, #CEE3F8, orangered)
-	--c-shade-weak rgba(0,0,0,0.125)
-	--c-shade-strong rgba(0,0,0,0.50)
 	--c-vote-down steelblue
-	--c-vote-up var(--c-brand-gradient)\
+	--c-vote-up var(--c-brand-gradient)
 	--f-family-mono 'Roboto Mono', monospace
 	--f-family-prop 'Helvetica', 'Arial', sans-serif
 .color-strategy-dark-bg
@@ -72,6 +70,8 @@ body
 	--c-blend-weak rgba(255,255,255,0.125)
 	--c-con-weak rgba(0,0,0,0.125)
 	--c-con-normal rgba(0,0,0,0.25)
+	--c-shade-weak rgba(0,0,0,0.125)
+	--c-shade-strong rgba(0,0,0,0.50)
 	--c-text-xfaint rgba(255,255,255,0.125)
 	--c-text-faint rgba(255,255,255,0.25)
 	--c-text-weak rgba(255,255,255,0.50)
@@ -84,6 +84,8 @@ body
 	--c-blend-weak rgba(0,0,0,0.125)
 	--c-con-weak rgba(255,255,255,0.5)
 	--c-con-normal white
+	--c-shade-weak rgba(0,0,0,0.0625)
+	--c-shade-strong rgba(0,0,0,0.25)
 	--c-text-xfaint rgba(0,0,0,0.125)
 	--c-text-faint rgba(0,0,0,0.25)
 	--c-text-weak rgba(0,0,0,0.50)
@@ -96,6 +98,8 @@ body
 	--c-blend-weak rgba(0,0,0,0.125)
 	--c-con-weak rgba(0,0,0,0.03125)
 	--c-con-normal rgba(0,0,0,0.0625)
+	--c-shade-weak rgba(0,0,0,0.03125)
+	--c-shade-strong rgba(0,0,0,0.125)
 	--c-text-xfaint rgba(0,0,0,0.125)
 	--c-text-faint rgba(0,0,0,0.25)
 	--c-text-weak rgba(0,0,0,0.50)
