--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -153,7 +153,7 @@ style.
 		&::-webkit-scrollbar
 			display none
 		.feed-type-posts &
-			background var(--c-con-weak)
+			background var(--c-shade-weak)
 			border-radius 11px
 	.feed-items-actions
 		display flex
