--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -1,9 +1,13 @@
 script.
+	import { getContext } from 'svelte'
+
 	import api from '../../../api/index.js'
-	import { format_url } from '../../url/index.js'
+	import { apply_query_parameters, format_url } from '../../url/index.js'
+
 	import AccountState from '../../state/AccountState.coffee'
 	
 	import Button from '../common/Button.pug'
+	import Checkbox from '../common/Checkbox.pug'
 	import Comment from '../post/Comment.pug'
 	import FeedLink from './FeedLink.pug'
 	import Label from '../common/Label.pug'
@@ -14,6 +18,7 @@ script.
 	export align = 'start'
 	export collection_id = null
 	export filter = null
+	export internal_navigate = getContext('internal_navigate')
 	export multireddit_name = null
 	export page_size = 10
 	export search_sort = null
@@ -121,7 +126,9 @@ nav.feed(class="feed-type-{type.split('_').at(-1)}")
 							{:else if type === 'subreddit_wikipages'}
 								a(href={format_url({ subreddit_name, wikipage_name: item })}) {item.split('/').join(' / ')}
 		{#if has_next_page}
-			menu.feed-items-actions(class='feed-item-actions-align-{align}')
+			menu.feed-items-actions
+				{#if type.endsWith('_posts')}
+					Checkbox(action={() => internal_navigate({ href: apply_query_parameters({ filter: filter === 'unread' ? 'all' : 'unread' }) })} checked={filter === 'all'} text='Show read')
 				Label(text={error ? 'Error: ' + (error.reason || error.message) : ''})
 					Button(action={() => load_next_page()} loading={loading} text={error ? 'Retry' : 'More'})
 	{:else}
@@ -157,10 +164,10 @@ style.
 			border-radius 11px
 	.feed-items-actions
 		display flex
+		flex-flow row wrap
 		gap 1ch
+		justify-content space-between
 		width 100%
-		&.feed-item-actions-align-end
-			justify-content flex-end
 	.feed-loading
 		color var(--c-text-weak)
 	.feed-post-link
