--- a/src/ui/component/common/Popup.pug
+++ b/src/ui/component/common/Popup.pug
@@ -18,6 +18,7 @@ style.
 	.popup
 		align-items center
 		display flex
+		font-size 1rem
 		justify-content center
 		height 100dvh
 		left 0
@@ -27,6 +28,7 @@ style.
 		z-index 100
 	.popup-body
 		background var(--c-theme)
+		color var(--c-theme-text)
 		border-radius 1em
 		box-shadow 0 0 24px var(--c-blend-weak)
 		max-height 90dvh
@@ -34,7 +36,6 @@ style.
 		overflow auto
 		padding 1em
 		position relative
-		width 960px
 	.popup-overlay
 		background var(--c-shade-strong)
 		height 100%
