--- a/src/ui/component/common/TextInput.pug
+++ b/src/ui/component/common/TextInput.pug
@@ -10,7 +10,6 @@ script.
 	export label = ''
 	export placeholder = ''
 	export type_action = ->
-	export width = 240
 
 	input = null
 	hotkeys = {}
@@ -37,13 +36,13 @@ label.text-input-label
 		HotkeyLabel(key={key})
 	| {label}
 	<!-- svelte-ignore a11y-autofocus -->
-	input.text-input(autofocus={autofocus} bind:this={input} on:keydown={process_keydown} on:input={e => type_action(e.target.value)} placeholder={placeholder} style='width: {width}px')
+	input.text-input(autofocus={autofocus} bind:this={input} on:keydown={process_keydown} on:input={e => type_action(e.target.value)} placeholder={placeholder})
 
 style.
 	.text-input
 		border-bottom 2px solid var(--c-text-faint)
+		flex 1 1 auto
 		font-weight var(--f-wght-strong)
-		width 100%
 		&:focus
 			outline none
 	.text-input-label
