--- a/src/ui/component/feed/subreddit/BanDialog.pug
+++ b/src/ui/component/feed/subreddit/BanDialog.pug
@@ -28,6 +28,7 @@ style.
 		display flex
 		flex-flow column nowrap
 		gap 1em
+		width 480px
 	.ban-menu-duration
 		aspect-ratio 1
 		background var(--c-con-weak)
