ui: use Reddit logo for feeds that don't have an icon assigned

--- a/src/ui/component/feed/collection/CollectionAvatar.pug
+++ b/src/ui/component/feed/collection/CollectionAvatar.pug
@@ -16,7 +16,7 @@ a.collection-avatar(class='collection-avatar-size-{size}' href='/c/{id}' title='
 	picture
 		source(srcset={subreddit?.community_icon})
 		source(srcset={subreddit?.icon_img})
-		img.collection-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/brand_circle.svg')
+		img.collection-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/reddit_logo.svg')
 
 style.
 	.collection-avatar
