--- a/src/ui/component/feed/multireddit/MultiredditAvatar.pug
+++ b/src/ui/component/feed/multireddit/MultiredditAvatar.pug
@@ -16,7 +16,7 @@ a.multireddit-avatar(class='multireddit-avatar-size-{size}' href='/u/{multireddi
 	picture
 		source(srcset={icon_url})
 		source(srcset={multireddit?.icon_url})
-		img.multireddit-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/brand_circle.svg')
+		img.multireddit-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/reddit_logo.svg')
 
 style.
 	.multireddit-avatar
