--- a/src/ui/component/feed/subreddit/SubredditAvatar.pug
+++ b/src/ui/component/feed/subreddit/SubredditAvatar.pug
@@ -16,7 +16,7 @@ a.subreddit-avatar(class='subreddit-avatar-size-{size}' href='/{subreddit ? subr
 		source(srcset={icon_url})
 		source(srcset={subreddit?.community_icon})
 		source(srcset={subreddit?.icon_img})
-		img.subreddit-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/brand_circle.svg')
+		img.subreddit-avatar-image(alt='' decoding='async' fetchpriority='low' loading='lazy' src='/reddit_logo.svg')
 
 style.
 	.subreddit-avatar
