ui: improve overflow handling for UserByline/UserFlair

--- a/src/ui/component/user/UserByline.pug
+++ b/src/ui/component/user/UserByline.pug
@@ -29,8 +29,9 @@ style.
 		letter-spacing 0.666px
 		line-height 1
 		gap 1ch
-		max-width 100%
+		overflow hidden
 		padding 1px 7px
+		text-overflow ellipsis
 		white-space nowrap
 	.user-byline-name
 		font-weight bold
