--- a/src/ui/component/common/FormattedHTML.pug
+++ b/src/ui/component/common/FormattedHTML.pug
@@ -7,7 +7,7 @@ script.
 	formatted = html
 	# Line 5: Remove paragraphs containing only empty spaces.
 	# Lines 6/7: Inject table cell text content into cell `title` attributes. This allows using ellipses to manage layout for cells with large amounts of content.
-		.replace(/<a href="https?:\/\/redd\.it\/(?<path>[^"]*)"[^>]*>/g, '<a href="/post/$<path>">')
+		.replace(/<a href="(?:https?:\/\/redd\.it)?\/(?<path>[^\/"]*)"[^>]*>/g, '<a href="/post/$<path>">')
 		.replace(/<a href="https?:\/\/(?:(?:new|np|old|www)\.)?reddit\.com\/(?<path>[^"]*)"[^>]*>/g, '<a href="/$<path>">')
 		.replace(/<a href="https:\/\/(?<subdomain>preview)\.redd\.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<a href="https://$<subdomain>.redd.it/$<filepath>" target="_blank"><img decoding="async" loading="eager" src="https://$<subdomain>.redd.it/$<filepath>"></a>')
 		.replace(/<li>(?<text>[^<]+)/g, '<li><span>$<text></span>')
